# deploy-ltx-on-rent-gpu

./: .env.example  .gitignore  Dockerfile  README.md  bentofile.yaml  pyproject.toml  requirements.txt  runpod.toml  service.py  setup.sh  start.sh  test_input.json
.github/workflows/: docker-build.yml
.runpod/: hub.json  tests.json
deploy/runpod/: CLAUDE.md  README.md  deploy.sh
deploy/vast/: CLAUDE.md  README.md  deploy.sh
patches/: ti2vid_two_stages.py
scripts/: fuse_checkpoint.py
src/: api.py  download_models.py  download_models_cli.py  gguf_converter.py  handler.py  pipeline.py  start.sh  storage.py
tests/: conftest.py  test_download_models.py  test_gguf_converter.py  test_pipeline.py  test_service.py  test_storage.py
