[project]
name = "ltx-video-service"
version = "1.0.0"
description = "LTX-2.3 22B text-to-video generation service"
requires-python = ">=3.11"
dependencies = [
    "bentoml>=1.4",
    "supabase>=2.0.0",
    "huggingface-hub>=0.27.0",
    "hf-xet>=0.1.0",
    "transformers>=4.52,<5.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
